2009-06-27  Glenn Morris  <rgm@gnu.org>

	* m/pmax.h: Restore file, with only netbsd portions.

2009-06-26  David Reitter <david.reitter@gmail.com>

	* nsterm.m (keydown): avoid infinite loop

2009-06-26  Peter Jolly  <peter@jollys.org>  (tiny change)

	* ftfont.c (get_adstyle_property): Call font_intern_prop with 1 as
	the arg FORCE_SYMBOL.

2009-06-25  Kenichi Handa  <handa@m17n.org>

	* fontset.c (fontset_find_font): When a usable rfont_def is found
	in a fallback font-group, make it the first element of the group.

2009-06-24  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-icon.h: Always define gnu_xpm_bits on GTK (bug#3671).

2009-06-24  Kenichi Handa  <handa@m17n.org>

	* fontset.c (fontset_get_font_group): Return 0 if no font-group is
	set for C.
	(fontset_font): Record the availability of a font for C both in
	the realized fontsets of the current one and the default one.

2009-06-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* sysdep.c (child_setup_tty): Remove SIGNALS_VIA_CHARACTERS
	conditional, it is always defined on AIX.

2009-06-23  Miles Bader  <miles@gnu.org>

	* window.c (Vrecenter_redisplay): New variable.
	(syms_of_window): Initialize it.
	(Qtty): New extern declaration.
	(Frecenter): Only do redisplay if Vrecenter_redisplay requests it.

2009-06-23  Jim Meyering  <meyering@redhat.com>

	* src/ftfont.c (setup_otf_gstring, ftfont_shape_by_flt): Use
	xmalloc and xrealloc (not malloc and realloc), so subsequent heap
	pointer dereferences are guaranteed to be valid.

2009-06-23  Kenichi Handa  <handa@m17n.org>

	* emacs.c (main): Call init_font ().

	* font.h (Vfont_log): Extern it.
	(FONT_ADD_LOG, FONT_DEFERRED_LOG): New macros.

	* font.c (font_sort_entities, font_list_entities)
	(font_matching_entity, font_open_entity)
	(font_close_object): Change font_add_log to FONT_ADD_LOG.
	(Vfont_log): Delete static.
	(font_log_env_checked): Delete this variable.
	(font_add_log): Don't check font_log_env_checked.
	(font_deferred_log): Check Vfont_log.