@@ -1,10 +1,15 @@
+2009-06-27  Chong Yidong  <cyd@stupidchicken.com>
+
+	* xdisp.c (mouse_face_from_buffer_pos): Fix detection of
+	truncation glyphs (Bug#3686).
+
 2009-06-27  Glenn Morris  <rgm@gnu.org>
 
 	* m/pmax.h: Restore file, with only netbsd portions.
 
 2009-06-26  David Reitter <david.reitter@gmail.com>
 
-	* nsterm.m (keydown): avoid infinite loop
+	* nsterm.m (keydown): Avoid infinite loop.
 
 2009-06-26  Peter Jolly  <peter@jollys.org>  (tiny change)
 
